src/MIDL/MIDLParser.java
// Generated from C:/Users/XingWcheng/Desktop/JavaProject/exp2/lab2/src\MIDL.g4 by ANTLR 4.10.1
package MIDL;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MIDLParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, WS = 4, KW_MODULE = 5, KW_STRUCT = 6, KW_BOOLEAN = 7,
            KW_SHORT = 8, KW_LONG = 9, KW_UNSIGNED = 10, KW_INT8 = 11, KW_INT16 = 12, KW_INT32 = 13,
            KW_INT64 = 14, KW_UINT8 = 15, KW_UINT16 = 16, KW_UINT32 = 17, KW_UINT64 = 18, KW_CHAR = 19,
            KW_STRING = 20, KW_FLOAT = 21, KW_DOUBLE = 22, KW_TRUE = 23, KW_FALSE = 24, LEFT_BRACE = 25,
            RIGHT_BRACE = 26, LEFT_SQUARE_BRACKET = 27, RIGHT_SQUARE_BRACKET = 28, SEMICOLON = 29,
            COMMA = 30, PLUS = 31, MINUS = 32, SLASH = 33, STAR = 34, PERCENT = 35, RIGHT_SHIFT = 36,
            LEFT_SHIFT = 37, EQUAL = 38, AMPERSAND = 39, PIPE = 40, TILDE = 41, CARET = 42, COLON = 43,
            DOUBLE_COLON = 44, ID = 45, LETTER = 46, UNDERLINE = 47, INTEGER_TYPE_SUFFIX = 48,
            FLOATING_PT = 49, INTEGER = 50, DIGIT = 51, EXPONENT = 52, FLOAT_TYPE_SUFFIX = 53,
            ESCAPE_SEQUENCE = 54, CHAR = 55, STRING = 56, BOOLEAN = 57;
    public static final int
            RULE_specification = 0, RULE_definition = 1, RULE_module = 2, RULE_type_decl = 3,
            RULE_struct_type = 4, RULE_member_list = 5, RULE_type_spec = 6, RULE_scoped_name = 7,
            RULE_base_type_spec = 8, RULE_floating_pt_type = 9, RULE_integer_type = 10,
            RULE_signed_int = 11, RULE_unsigned_int = 12, RULE_declarators = 13, RULE_declarator = 14,
            RULE_simple_declarator = 15, RULE_array_declarator = 16, RULE_exp_list = 17,
            RULE_or_expr = 18, RULE_xor_expr = 19, RULE_and_expr = 20, RULE_shift_expr = 21,
            RULE_add_expr = 22, RULE_mult_expr = 23, RULE_unary_expr = 24, RULE_literal = 25;

    private static String[] makeRuleNames() {
        return new String[]{
                "specification", "definition", "module", "type_decl", "struct_type",
                "member_list", "type_spec", "scoped_name", "base_type_spec", "floating_pt_type",
                "integer_type", "signed_int", "unsigned_int", "declarators", "declarator",
                "simple_declarator", "array_declarator", "exp_list", "or_expr", "xor_expr",
                "and_expr", "shift_expr", "add_expr", "mult_expr", "unary_expr", "literal"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'long double'", "'uint16 '", "'uint32 '", null, "'module'", "'struct'",
                "'boolean'", "'short'", "'long'", "'unsigned'", "'int8'", "'int16'",
                "'int32'", "'int64'", "'uint8'", "'uint16'", "'uint32'", "'uint64'",
                "'char'", "'string'", "'float'", "'double'", "'true'", "'false'", "'{'",
                "'}'", "'['", "']'", "';'", "','", "'+'", "'-'", "'/'", "'*'", "'%'",
                "'>>'", "'<<'", "'='", "'&'", "'|'", "'~'", "'^'", "':'", "'::'", null,
                null, "'_'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, "WS", "KW_MODULE", "KW_STRUCT", "KW_BOOLEAN",
                "KW_SHORT", "KW_LONG", "KW_UNSIGNED", "KW_INT8", "KW_INT16", "KW_INT32",
                "KW_INT64", "KW_UINT8", "KW_UINT16", "KW_UINT32", "KW_UINT64", "KW_CHAR",
                "KW_STRING", "KW_FLOAT", "KW_DOUBLE", "KW_TRUE", "KW_FALSE", "LEFT_BRACE",
                "RIGHT_BRACE", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", "SEMICOLON",
                "COMMA", "PLUS", "MINUS", "SLASH", "STAR", "PERCENT", "RIGHT_SHIFT",
                "LEFT_SHIFT", "EQUAL", "AMPERSAND", "PIPE", "TILDE", "CARET", "COLON",
                "DOUBLE_COLON", "ID", "LETTER", "UNDERLINE", "INTEGER_TYPE_SUFFIX", "FLOATING_PT",
                "INTEGER", "DIGIT", "EXPONENT", "FLOAT_TYPE_SUFFIX", "ESCAPE_SEQUENCE",
                "CHAR", "STRING", "BOOLEAN"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "MIDL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public MIDLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class SpecificationContext extends ParserRuleContext {
        public List<DefinitionContext> definition() {
            return getRuleContexts(DefinitionContext.class);
        }

        public DefinitionContext definition(int i) {
            return getRuleContext(DefinitionContext.class, i);
        }

        public SpecificationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_specification;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterSpecification(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitSpecification(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitSpecification(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SpecificationContext specification() throws RecognitionException {
        SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_specification);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(53);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(52);
                            definition();
                        }
                    }
                    setState(55);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == KW_MODULE || _la == KW_STRUCT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DefinitionContext extends ParserRuleContext {
        public Type_declContext type_decl() {
            return getRuleContext(Type_declContext.class, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(MIDLParser.SEMICOLON, 0);
        }

        public ModuleContext module() {
            return getRuleContext(ModuleContext.class, 0);
        }

        public DefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_definition;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterDefinition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitDefinition(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitDefinition(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DefinitionContext definition() throws RecognitionException {
        DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_definition);
        try {
            setState(63);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case KW_STRUCT:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(57);
                    type_decl();
                    setState(58);
                    match(SEMICOLON);
                }
                break;
                case KW_MODULE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(60);
                    module();
                    setState(61);
                    match(SEMICOLON);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ModuleContext extends ParserRuleContext {
        public TerminalNode KW_MODULE() {
            return getToken(MIDLParser.KW_MODULE, 0);
        }

        public TerminalNode ID() {
            return getToken(MIDLParser.ID, 0);
        }

        public TerminalNode LEFT_BRACE() {
            return getToken(MIDLParser.LEFT_BRACE, 0);
        }

        public TerminalNode RIGHT_BRACE() {
            return getToken(MIDLParser.RIGHT_BRACE, 0);
        }

        public List<DefinitionContext> definition() {
            return getRuleContexts(DefinitionContext.class);
        }

        public DefinitionContext definition(int i) {
            return getRuleContext(DefinitionContext.class, i);
        }

        public ModuleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_module;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterModule(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitModule(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitModule(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ModuleContext module() throws RecognitionException {
        ModuleContext _localctx = new ModuleContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_module);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(65);
                match(KW_MODULE);
                setState(66);
                match(ID);
                setState(67);
                match(LEFT_BRACE);
                setState(69);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(68);
                            definition();
                        }
                    }
                    setState(71);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == KW_MODULE || _la == KW_STRUCT);
                setState(73);
                match(RIGHT_BRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Type_declContext extends ParserRuleContext {
        public Struct_typeContext struct_type() {
            return getRuleContext(Struct_typeContext.class, 0);
        }

        public TerminalNode KW_STRUCT() {
            return getToken(MIDLParser.KW_STRUCT, 0);
        }

        public TerminalNode ID() {
            return getToken(MIDLParser.ID, 0);
        }

        public Type_declContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type_decl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterType_decl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitType_decl(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitType_decl(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Type_declContext type_decl() throws RecognitionException {
        Type_declContext _localctx = new Type_declContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_type_decl);
        try {
            setState(78);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(75);
                    struct_type();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(76);
                    match(KW_STRUCT);
                    setState(77);
                    match(ID);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Struct_typeContext extends ParserRuleContext {
        public TerminalNode KW_STRUCT() {
            return getToken(MIDLParser.KW_STRUCT, 0);
        }

        public TerminalNode ID() {
            return getToken(MIDLParser.ID, 0);
        }

        public TerminalNode LEFT_BRACE() {
            return getToken(MIDLParser.LEFT_BRACE, 0);
        }

        public Member_listContext member_list() {
            return getRuleContext(Member_listContext.class, 0);
        }

        public TerminalNode RIGHT_BRACE() {
            return getToken(MIDLParser.RIGHT_BRACE, 0);
        }

        public Struct_typeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_struct_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterStruct_type(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitStruct_type(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitStruct_type(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Struct_typeContext struct_type() throws RecognitionException {
        Struct_typeContext _localctx = new Struct_typeContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_struct_type);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(80);
                match(KW_STRUCT);
                setState(81);
                match(ID);
                setState(82);
                match(LEFT_BRACE);
                setState(83);
                member_list();
                setState(84);
                match(RIGHT_BRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Member_listContext extends ParserRuleContext {
        public List<Type_specContext> type_spec() {
            return getRuleContexts(Type_specContext.class);
        }

        public Type_specContext type_spec(int i) {
            return getRuleContext(Type_specContext.class, i);
        }

        public List<DeclaratorsContext> declarators() {
            return getRuleContexts(DeclaratorsContext.class);
        }

        public DeclaratorsContext declarators(int i) {
            return getRuleContext(DeclaratorsContext.class, i);
        }

        public List<TerminalNode> SEMICOLON() {
            return getTokens(MIDLParser.SEMICOLON);
        }

        public TerminalNode SEMICOLON(int i) {
            return getToken(MIDLParser.SEMICOLON, i);
        }

        public Member_listContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_member_list;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterMember_list(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitMember_list(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitMember_list(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Member_listContext member_list() throws RecognitionException {
        Member_listContext _localctx = new Member_listContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_member_list);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(92);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << KW_STRUCT) | (1L << KW_BOOLEAN) | (1L << KW_SHORT) | (1L << KW_LONG) | (1L << KW_UNSIGNED) | (1L << KW_INT8) | (1L << KW_INT16) | (1L << KW_INT32) | (1L << KW_INT64) | (1L << KW_UINT8) | (1L << KW_UINT64) | (1L << KW_CHAR) | (1L << KW_STRING) | (1L << KW_FLOAT) | (1L << KW_DOUBLE) | (1L << DOUBLE_COLON) | (1L << ID))) != 0)) {
                    {
                        {
                            setState(86);
                            type_spec();
                            setState(87);
                            declarators();
                            setState(88);
                            match(SEMICOLON);
                        }
                    }
                    setState(94);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Type_specContext extends ParserRuleContext {
        public Scoped_nameContext scoped_name() {
            return getRuleContext(Scoped_nameContext.class, 0);
        }

        public Base_type_specContext base_type_spec() {
            return getRuleContext(Base_type_specContext.class, 0);
        }

        public Struct_typeContext struct_type() {
            return getRuleContext(Struct_typeContext.class, 0);
        }

        public Type_specContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type_spec;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterType_spec(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitType_spec(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitType_spec(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Type_specContext type_spec() throws RecognitionException {
        Type_specContext _localctx = new Type_specContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_type_spec);
        try {
            setState(98);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case DOUBLE_COLON:
                case ID:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(95);
                    scoped_name();
                }
                break;
                case T__0:
                case T__1:
                case T__2:
                case KW_BOOLEAN:
                case KW_SHORT:
                case KW_LONG:
                case KW_UNSIGNED:
                case KW_INT8:
                case KW_INT16:
                case KW_INT32:
                case KW_INT64:
                case KW_UINT8:
                case KW_UINT64:
                case KW_CHAR:
                case KW_STRING:
                case KW_FLOAT:
                case KW_DOUBLE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(96);
                    base_type_spec();
                }
                break;
                case KW_STRUCT:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(97);
                    struct_type();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Scoped_nameContext extends ParserRuleContext {
        public List<TerminalNode> ID() {
            return getTokens(MIDLParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(MIDLParser.ID, i);
        }

        public List<TerminalNode> DOUBLE_COLON() {
            return getTokens(MIDLParser.DOUBLE_COLON);
        }

        public TerminalNode DOUBLE_COLON(int i) {
            return getToken(MIDLParser.DOUBLE_COLON, i);
        }

        public Scoped_nameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_scoped_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterScoped_name(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitScoped_name(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitScoped_name(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Scoped_nameContext scoped_name() throws RecognitionException {
        Scoped_nameContext _localctx = new Scoped_nameContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_scoped_name);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(104);
                _errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1: {
                            {
                                setState(101);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                if (_la == DOUBLE_COLON) {
                                    {
                                        setState(100);
                                        match(DOUBLE_COLON);
                                    }
                                }

                                setState(103);
                                match(ID);
                            }
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    setState(106);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Base_type_specContext extends ParserRuleContext {
        public Floating_pt_typeContext floating_pt_type() {
            return getRuleContext(Floating_pt_typeContext.class, 0);
        }

        public Integer_typeContext integer_type() {
            return getRuleContext(Integer_typeContext.class, 0);
        }

        public TerminalNode KW_CHAR() {
            return getToken(MIDLParser.KW_CHAR, 0);
        }

        public TerminalNode KW_STRING() {
            return getToken(MIDLParser.KW_STRING, 0);
        }

        public TerminalNode KW_BOOLEAN() {
            return getToken(MIDLParser.KW_BOOLEAN, 0);
        }

        public Base_type_specContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_base_type_spec;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterBase_type_spec(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitBase_type_spec(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitBase_type_spec(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Base_type_specContext base_type_spec() throws RecognitionException {
        Base_type_specContext _localctx = new Base_type_specContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_base_type_spec);
        try {
            setState(113);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__0:
                case KW_FLOAT:
                case KW_DOUBLE:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(108);
                    floating_pt_type();
                }
                break;
                case T__1:
                case T__2:
                case KW_SHORT:
                case KW_LONG:
                case KW_UNSIGNED:
                case KW_INT8:
                case KW_INT16:
                case KW_INT32:
                case KW_INT64:
                case KW_UINT8:
                case KW_UINT64:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(109);
                    integer_type();
                }
                break;
                case KW_CHAR:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(110);
                    match(KW_CHAR);
                }
                break;
                case KW_STRING:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(111);
                    match(KW_STRING);
                }
                break;
                case KW_BOOLEAN:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(112);
                    match(KW_BOOLEAN);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Floating_pt_typeContext extends ParserRuleContext {
        public TerminalNode KW_FLOAT() {
            return getToken(MIDLParser.KW_FLOAT, 0);
        }

        public TerminalNode KW_DOUBLE() {
            return getToken(MIDLParser.KW_DOUBLE, 0);
        }

        public Floating_pt_typeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_floating_pt_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).enterFloating_pt_type(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof MIDLListener) ((MIDLListener) listener).exitFloating_pt_type(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof MIDLVisitor) return ((MIDLVisitor<? extends T>) visitor).visitFloating_pt_type(this);
            else return visitor.visitChildren(this);
        }
    }

    public final Floating_pt_typeContext floating_pt_type() throws RecognitionException {
        Floating_pt_typeContext _localctx = new Floating_pt_typeContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_floating_pt_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(115);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << KW_FLOAT) | (1L << KW_DOUBLE))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Integer_typeContext extends ParserRuleContext {
        public Signed_intContext signed_int() {
            return getRuleContext(Signed_intContext.class, 0);
        }

        public Unsigned_intContext unsigned_int() {
            return getRuleContext(Unsigned_intContext.class, 0);
        }
